<resources>
    <string name="app_name">LocalCommunity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="message_please_wait">Please Wait</string>
    <string name="action_settings" translatable="true">Settings</string>
    <string name="location_disabled_message" translatable="true">To use the app you need to enable location.</string>
    <string name="enable" translatable="true">enable</string>
    <string name="disable" translatable="true">disable</string>
    <string name="location_disabled" translatable="true">Location Disabled</string>
    <string name="cancel" translatable="true">cancel</string>
    <string name="no_network_message">Network not found</string>
    <string name="tap_anywhere_to_reload">Tap anywhere to reload</string>
    <string name="save_changes">Save Changes</string>

    <string name="community_actionbar_title" translatable="true">Communities</string>
    <string name="title">Title</string>
    <string name="image">Image</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="add_community">Add Community</string>
    <string name="image_missing">Please upload an image</string>
    <string name="title_missing">Please set a title</string>
    <string name="desc_missing">Please set a description</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="sign_out">Sign out</string>

    <string name="post">Post</string>
    <string name="add_post">New Post</string>
    <string name="content">Content</string>
    <string name="content_missing">Please add content</string>
    <string name="upload_image_question">Upload an image?</string>
    <string name="posting_wait_message">Uploading post...</string>
    <string name="comment_hint">comment...</string>
    <string-array name="post_long_press_user">
        <item>Delete</item>
    </string-array>
    <string-array name="post_long_press">
        <item></item>
    </string-array>

    <string name="facebook_app_id" translatable="false">299665240422560</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
