<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="nick.com.localcommunity.EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/profile_picture"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"/>

        <nick.com.localcommunity.UtilityViews.SquareImageView
            android:scaleType="fitCenter"
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:background="#000000"
            android:onClick="onChangeImage"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/username"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/username"
        android:freezesText="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"
        android:text="@string/bio"/>
    <EditText
        android:id="@+id/bio"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:freezesText="true"
        android:lines="@integer/bio_line_count"
        android:maxLines="@integer/bio_line_count"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:onClick="onSaveChanges"
            android:layout_alignParentBottom="true"
            android:text="@string/save_changes"
            android:textColor="@color/colorGeneralButtonText"
            android:background="@color/colorGeneralButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>


</LinearLayout>
