<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nick.com.localcommunity.AddPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            >
            <TextView
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/upload_image_question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"/>

            <nick.com.localcommunity.UtilityViews.SquareImageView
                android:id="@+id/post_img"
                android:background="@android:color/black"
                android:scaleType="fitCenter"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:onClick="onSetImage"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3">
            <EditText
                android:id="@+id/post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:freezesText="true"
                android:hint="@string/title"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3">

            <EditText
                android:id="@+id/post_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/content"
                android:freezesText="true"
                android:inputType="textMultiLine|textAutoCorrect|textAutoComplete|textCapSentences"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/submit"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/buttonColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/buttonTextColor"
            android:onClick="onSubmit"/>

    </LinearLayout>

</ScrollView>
