<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nick.com.localcommunity.AddCommunityActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0">
            <TextView
                android:text="@string/image"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="0.7"/>
            <nick.com.localcommunity.UtilityViews.SquareImageView
                android:id="@+id/community_img"
                android:scaleType="fitCenter"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/black"
                android:onClick="onUploadImage"
                android:layout_weight="0.3"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/community_name"
                android:imeOptions="actionNext"
                android:inputType="textAutoCorrect"
                android:nextFocusDown="@+id/community_img"
                android:freezesText="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/community_desc"
                android:imeOptions="actionDone"
                android:inputType="textImeMultiLine"
                android:lines="@integer/bio_line_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"/>

        </android.support.design.widget.TextInputLayout>


        <Button
            android:text="@string/submit"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:imeOptions="actionDone"
            android:background="@color/colorGeneralButton"
            android:textColor="@color/colorGeneralButtonText"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:onClick="onSubmit"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
